Fix up header navs, spacing

--- a/cms/sass/components/_dropdown.scss
+++ b/cms/sass/components/_dropdown.scss
@@ -18,7 +18,7 @@
 .dropdown__menu {
   display: none;
   padding: 0;
-  margin: $spacing-03 0 0 0;
+  margin: 0;
   position: absolute;
   top: 100%;
   left: 0;
